--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "chalk": "^2.4.2",
     "config": "^3.2.2",
     "cors": "^2.8.4",
     "crypto": "^1.0.1",
