--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^5.3.7",
     "morgan": "^1.9.1",
     "multer-gridfs-storage": "^3.2.3",
+    "prompt": "^1.0.0",
     "underscore": "^1.9.1",
     "winston": "^3.2.1"
   },
